Android customReceiver sample update

--- a/Android_mParticle_LP_customReceiver/app/src/main/res/layout/content_main.xml
+++ b/Android_mParticle_LP_customReceiver/app/src/main/res/layout/content_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -11,10 +12,51 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/welcomeString"/>
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loginField"
+        android:layout_marginTop="30dp"/>
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="login"
+        android:id="@+id/loginButton"
+        android:text="Login"
+        android:layout_below="@+id/loginField"
+        android:layout_toRightOf="@+id/welcomeString"
+        android:layout_toEndOf="@+id/welcomeString"
+        android:layout_marginTop="36dp" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loginButton"
+        android:layout_marginTop="53dp"
+        android:layout_toEndOf="@+id/welcomeString"
+        android:layout_toRightOf="@+id/welcomeString"
+        android:text="Track Purchase"
+        android:onClick="trackPurchase"/>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_marginTop="47dp"
+        android:layout_toEndOf="@+id/welcomeString"
+        android:layout_toRightOf="@+id/welcomeString"
+        android:text="SetUA"
+        android:onClick="setUA"/>
+
+</RelativeLayout>
